--- a/src/hojasestilo/tarea.css
+++ b/src/hojasestilo/tarea.css
@@ -14,8 +14,12 @@
     border: 3px solid black;
 }
 
+.tarea-nombre {
+    cursor: pointer;
+}
 
-.tarea-contenedor.completada {
+
+.completada {
     text-decoration: line-through;
     background-color: rgb(105, 5, 105);
 }
@@ -28,4 +32,5 @@
 .tarea-icono{
     width: 30px;
     height: 30px;
+    cursor: pointer;
 }
